# realtime-audio-equalizer-spectrum-analyzer

./: README.md  audio_engine.py  main.py  pyproject.toml  requirements.txt
src/: audio_engine.py  constants.py  dsp.py  gui.py
src/speqtr/: __init__.py  __main__.py  audio_engine.py  dsp.py  gui.py  main.py
src/speqtr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
